add no-check version of SkPackARGB32, for callers that want to deliberately build a SkPMColor that may not be valid premultiplied (e.g. compatibility with webgl)

see https://bugs.webkit.org/show_bug.cgi?id=54023



git-svn-id: http://skia.googlecode.com/svn/trunk@796 2bbb7eff-a529-9590-31e7-b0007b416f81